# simple-sales

./: .dockerignore  .env.backend.compose  .env.backend.local  .env.database.compose  .env.database.local  .gitignore  README.md  backend.compose.env  backend.local.env  compose.yaml  database.compose.env
backend/: Makefile
backend/simple_sales/: __main__.py  service.py
database/: Dockerfile  Makefile  docker-entrypoint.sh
database/simple_sales/: faker.py  schema.sql
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
simple-sales-backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
simple-sales-backend/simple_sales/: __main__.py  settings.py
simple-sales-backend/simple_sales/api/: __main__.py  app.py  models.py
simple-sales-backend/simple_sales/api/dependencies/: argon2.py  auth.py  authorization.py  db.py  session.py
simple-sales-backend/simple_sales/api/routers/: cities.py  employee_types.py  employees.py  sessions.py  users.py
simple-sales-backend/simple_sales/db/: builders.py  cities.py  database.py  errors.py  models.py
simple-sales-backend/simple_sales/db/queries/: cities.py  employee_types.py  employees.py  sessions.py  users.py
simple-sales-backend/simple_sales/models/: authorization.py  session.py  user.py
simple-sales-backend/simple_sales/services/: database.py
simple-sales-database/: .dockerignore  Dockerfile  Makefile
simple-sales-database/simple_sales/: _create_policies.sql  _drop_policies.sql  drop_roles.sql  (+7 more)
simple-sales-frontend/: README.md  index.html  package-lock.json  package.json
(+73 files in other folders)
